--- a/src/style/generals.scss
+++ b/src/style/generals.scss
@@ -1,6 +1,14 @@
+//nodemodules
 @import '~bootstrap/scss/bootstrap';
 
-//fontawesome
+//font
+@import "~@fontsource/montserrat/index.css";
+@import "~@fontsource/montserrat/700.css";
+
+//variabili
+@import './vars.scss';
+
+
 
 
 
